Add £50 for 3 months early access trial pricing tier

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_PRICE_BASIC=price_xxxxx
 STRIPE_PRICE_TIPS=price_xxxxx
 STRIPE_PRICE_AI_AGENT=price_xxxxx
+STRIPE_PRICE_TRIAL=price_xxxxx
 STRIPE_PRICE_EARLY_BIRD=price_xxxxx
 
 # Base URL for redirects
