Add Stripe/Supabase auth, subscriptions, dashboard and payment history

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
+# Supabase Configuration
+# Get these from https://supabase.com/dashboard/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
 # Stripe Configuration
 # Get your keys from https://dashboard.stripe.com/apikeys
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
+# Stripe Webhook Secret
+# Get this from https://dashboard.stripe.com/webhooks after creating a webhook endpoint
+# For local testing, use Stripe CLI: stripe listen --forward-to localhost:3000/api/webhooks/stripe
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # Stripe Price IDs
 # Create these in your Stripe Dashboard under Products
