--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.3",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@stripe/stripe-js": "^2.4.0",
     "stripe": "^14.14.0"
   },
   "devDependencies": {
@@ -27,4 +30,3 @@
     "typescript": "^5.3.3"
   }
 }
-
